@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2000-2012 Liferay, Inc. All rights reserved.
+ * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
@@ -24,8 +24,8 @@ import java.sql.Types;
 public class CyrusUser implements Serializable {
 
 	public static final Object[][] TABLE_COLUMNS = {
-		{"userId", new Integer(Types.VARCHAR)},
-		{"password_", new Integer(Types.VARCHAR)}
+		{"userId", Integer.valueOf(Types.VARCHAR)},
+		{"password_", Integer.valueOf(Types.VARCHAR)}
 	};
 
 	public static final String TABLE_NAME = "CyrusUser";
