@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2000-2012 Liferay, Inc. All rights reserved.
+ * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
@@ -112,7 +112,7 @@ public class ServletAuthorizingFilter extends BasePortalFilter {
 
 				// User id
 
-				session.setAttribute(WebKeys.USER_ID, new Long(userId));
+				session.setAttribute(WebKeys.USER_ID, Long.valueOf(userId));
 
 				// User locale
 
@@ -127,7 +127,7 @@ public class ServletAuthorizingFilter extends BasePortalFilter {
 			ServletAuthorizingFilter.class, request, response, filterChain);
 	}
 
-	private static Log _log = LogFactoryUtil.getLog(
+	private static final Log _log = LogFactoryUtil.getLog(
 		ServletAuthorizingFilter.class);
 
 }
