@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2000-2012 Liferay, Inc. All rights reserved.
+ * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
@@ -40,7 +40,7 @@ public class LazyPKUpgradeColumnImpl extends PKUpgradeColumnImpl {
 			newValue = (Long)valueMapper.getNewValue(oldValue);
 		}
 		catch (StagnantRowException sre) {
-			newValue = new Long(increment());
+			newValue = Long.valueOf(increment());
 
 			valueMapper.mapValue(oldValue, newValue);
 		}
