@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2000-2012 Liferay, Inc. All rights reserved.
+ * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
  * the terms of the GNU Lesser General Public License as published by the Free
@@ -14,22 +14,25 @@
 
 package com.liferay.portlet.usersadmin.util;
 
-import com.liferay.portal.NoSuchOrganizationException;
-import com.liferay.portal.NoSuchUserException;
+import com.liferay.portal.kernel.configuration.Filter;
 import com.liferay.portal.kernel.exception.PortalException;
-import com.liferay.portal.kernel.exception.SystemException;
+import com.liferay.portal.kernel.language.LanguageUtil;
 import com.liferay.portal.kernel.search.Document;
 import com.liferay.portal.kernel.search.Field;
 import com.liferay.portal.kernel.search.Hits;
 import com.liferay.portal.kernel.search.Indexer;
 import com.liferay.portal.kernel.search.IndexerRegistryUtil;
+import com.liferay.portal.kernel.security.pacl.DoPrivileged;
+import com.liferay.portal.kernel.util.Accessor;
 import com.liferay.portal.kernel.util.ArrayUtil;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.ListUtil;
 import com.liferay.portal.kernel.util.OrderByComparator;
 import com.liferay.portal.kernel.util.ParamUtil;
+import com.liferay.portal.kernel.util.PropsKeys;
+import com.liferay.portal.kernel.util.SetUtil;
+import com.liferay.portal.kernel.util.StringPool;
 import com.liferay.portal.kernel.util.StringUtil;
-import com.liferay.portal.kernel.util.Tuple;
 import com.liferay.portal.kernel.util.Validator;
 import com.liferay.portal.model.Address;
 import com.liferay.portal.model.EmailAddress;
@@ -43,18 +46,25 @@ import com.liferay.portal.model.User;
 import com.liferay.portal.model.UserGroup;
 import com.liferay.portal.model.UserGroupRole;
 import com.liferay.portal.model.Website;
+import com.liferay.portal.security.auth.PrincipalThreadLocal;
+import com.liferay.portal.security.membershippolicy.OrganizationMembershipPolicyUtil;
+import com.liferay.portal.security.membershippolicy.SiteMembershipPolicyUtil;
 import com.liferay.portal.security.permission.ActionKeys;
 import com.liferay.portal.security.permission.PermissionChecker;
+import com.liferay.portal.security.permission.PermissionThreadLocal;
 import com.liferay.portal.service.AddressLocalServiceUtil;
 import com.liferay.portal.service.AddressServiceUtil;
 import com.liferay.portal.service.EmailAddressLocalServiceUtil;
 import com.liferay.portal.service.EmailAddressServiceUtil;
+import com.liferay.portal.service.GroupLocalServiceUtil;
 import com.liferay.portal.service.OrgLaborLocalServiceUtil;
 import com.liferay.portal.service.OrgLaborServiceUtil;
 import com.liferay.portal.service.OrganizationLocalServiceUtil;
 import com.liferay.portal.service.PhoneLocalServiceUtil;
 import com.liferay.portal.service.PhoneServiceUtil;
 import com.liferay.portal.service.RoleLocalServiceUtil;
+import com.liferay.portal.service.ServiceContext;
+import com.liferay.portal.service.UserGroupLocalServiceUtil;
 import com.liferay.portal.service.UserGroupRoleLocalServiceUtil;
 import com.liferay.portal.service.UserLocalServiceUtil;
 import com.liferay.portal.service.WebsiteLocalServiceUtil;
@@ -64,8 +74,10 @@ import com.liferay.portal.service.permission.OrganizationPermissionUtil;
 import com.liferay.portal.service.permission.RolePermissionUtil;
 import com.liferay.portal.service.permission.UserGroupPermissionUtil;
 import com.liferay.portal.service.permission.UserGroupRolePermissionUtil;
+import com.liferay.portal.service.permission.UserPermissionUtil;
 import com.liferay.portal.service.persistence.UserGroupRolePK;
 import com.liferay.portal.util.PortalUtil;
+import com.liferay.portal.util.PropsUtil;
 import com.liferay.portal.util.PropsValues;
 import com.liferay.portal.util.comparator.GroupNameComparator;
 import com.liferay.portal.util.comparator.GroupTypeComparator;
@@ -81,13 +93,13 @@ import com.liferay.portal.util.comparator.UserGroupNameComparator;
 import com.liferay.portal.util.comparator.UserJobTitleComparator;
 import com.liferay.portal.util.comparator.UserLastNameComparator;
 import com.liferay.portal.util.comparator.UserScreenNameComparator;
-import com.liferay.util.UniqueList;
 
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Locale;
 import java.util.Set;
 
 import javax.portlet.ActionRequest;
@@ -102,8 +114,10 @@ import javax.servlet.http.HttpServletRequest;
  * @author Jorge Ferrer
  * @author Julio Camarero
  */
+@DoPrivileged
 public class UsersAdminImpl implements UsersAdmin {
 
+	@Override
 	public void addPortletBreadcrumbEntries(
 			Organization organization, HttpServletRequest request,
 			RenderResponse renderResponse)
@@ -111,7 +125,7 @@ public class UsersAdminImpl implements UsersAdmin {
 
 		PortletURL portletURL = renderResponse.createRenderURL();
 
-		portletURL.setParameter("struts_action", "/users_admin/view");
+		portletURL.setParameter("mvcRenderCommandName", "/users_admin/view");
 
 		List<Organization> ancestorOrganizations = organization.getAncestors();
 
@@ -126,41 +140,60 @@ public class UsersAdminImpl implements UsersAdmin {
 				request, ancestorOrganization.getName(), portletURL.toString());
 		}
 
+		Organization unescapedOrganization = organization.toUnescapedModel();
+
 		portletURL.setParameter(
-			"organizationId", String.valueOf(organization.getOrganizationId()));
+			"organizationId",
+			String.valueOf(unescapedOrganization.getOrganizationId()));
 
 		PortalUtil.addPortletBreadcrumbEntry(
-			request, organization.getName(), portletURL.toString());
+			request, unescapedOrganization.getName(), portletURL.toString());
 	}
 
+	@Override
 	public long[] addRequiredRoles(long userId, long[] roleIds)
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		User user = UserLocalServiceUtil.getUser(userId);
 
 		return addRequiredRoles(user, roleIds);
 	}
 
+	@Override
 	public long[] addRequiredRoles(User user, long[] roleIds)
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		if (user.isDefaultUser()) {
 			return removeRequiredRoles(user, roleIds);
 		}
 
-		Role role = RoleLocalServiceUtil.getRole(
+		Role administratorRole = RoleLocalServiceUtil.getRole(
+			user.getCompanyId(), RoleConstants.ADMINISTRATOR);
+
+		long[] administratorUserIds = UserLocalServiceUtil.getRoleUserIds(
+			administratorRole.getRoleId());
+
+		if (ArrayUtil.contains(administratorUserIds, user.getUserId()) &&
+			!ArrayUtil.contains(roleIds, administratorRole.getRoleId()) &&
+			(administratorUserIds.length == 1)) {
+
+			roleIds = ArrayUtil.append(roleIds, administratorRole.getRoleId());
+		}
+
+		Role userRole = RoleLocalServiceUtil.getRole(
 			user.getCompanyId(), RoleConstants.USER);
 
-		if (!ArrayUtil.contains(roleIds, role.getRoleId())) {
-			roleIds = ArrayUtil.append(roleIds, role.getRoleId());
+		if (!ArrayUtil.contains(roleIds, userRole.getRoleId())) {
+			roleIds = ArrayUtil.append(roleIds, userRole.getRoleId());
 		}
 
 		return roleIds;
 	}
 
+	@Override
 	public List<Role> filterGroupRoles(
 			PermissionChecker permissionChecker, long groupId, List<Role> roles)
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		List<Role> filteredGroupRoles = ListUtil.copy(roles);
 
@@ -169,10 +202,10 @@ public class UsersAdminImpl implements UsersAdmin {
 		while (itr.hasNext()) {
 			Role groupRole = itr.next();
 
-			String name = groupRole.getName();
+			String roleName = groupRole.getName();
 
-			if (name.equals(RoleConstants.ORGANIZATION_USER) ||
-				name.equals(RoleConstants.SITE_MEMBER)) {
+			if (roleName.equals(RoleConstants.ORGANIZATION_USER) ||
+				roleName.equals(RoleConstants.SITE_MEMBER)) {
 
 				itr.remove();
 			}
@@ -184,20 +217,32 @@ public class UsersAdminImpl implements UsersAdmin {
 			return filteredGroupRoles;
 		}
 
+		Group group = GroupLocalServiceUtil.getGroup(groupId);
+
+		if (!GroupPermissionUtil.contains(
+				permissionChecker, group, ActionKeys.ASSIGN_USER_ROLES) &&
+			!OrganizationPermissionUtil.contains(
+				permissionChecker, group.getOrganizationId(),
+				ActionKeys.ASSIGN_USER_ROLES)) {
+
+			return Collections.emptyList();
+		}
+
 		itr = filteredGroupRoles.iterator();
 
 		while (itr.hasNext()) {
 			Role groupRole = itr.next();
 
-			String groupRoleName = groupRole.getName();
+			String roleName = groupRole.getName();
 
-			if (groupRoleName.equals(
+			if (roleName.equals(
 					RoleConstants.ORGANIZATION_ADMINISTRATOR) ||
-				groupRoleName.equals(RoleConstants.ORGANIZATION_OWNER) ||
-				groupRoleName.equals(RoleConstants.SITE_ADMINISTRATOR) ||
-				groupRoleName.equals(RoleConstants.SITE_OWNER) ||
-				!GroupPermissionUtil.contains(
-					permissionChecker, groupId, ActionKeys.ASSIGN_USER_ROLES)) {
+				roleName.equals(RoleConstants.ORGANIZATION_OWNER) ||
+				roleName.equals(RoleConstants.SITE_ADMINISTRATOR) ||
+				roleName.equals(RoleConstants.SITE_OWNER) ||
+				!RolePermissionUtil.contains(
+					permissionChecker, groupId, groupRole.getRoleId(),
+					ActionKeys.ASSIGN_MEMBERS)) {
 
 				itr.remove();
 			}
@@ -206,9 +251,10 @@ public class UsersAdminImpl implements UsersAdmin {
 		return filteredGroupRoles;
 	}
 
+	@Override
 	public List<Group> filterGroups(
 			PermissionChecker permissionChecker, List<Group> groups)
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		if (permissionChecker.isCompanyAdmin()) {
 			return groups;
@@ -222,8 +268,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			Group group = itr.next();
 
 			if (!GroupPermissionUtil.contains(
-					permissionChecker, group.getGroupId(),
-					ActionKeys.ASSIGN_MEMBERS)) {
+					permissionChecker, group, ActionKeys.ASSIGN_MEMBERS)) {
 
 				itr.remove();
 			}
@@ -232,10 +277,11 @@ public class UsersAdminImpl implements UsersAdmin {
 		return filteredGroups;
 	}
 
+	@Override
 	public List<Organization> filterOrganizations(
 			PermissionChecker permissionChecker,
 			List<Organization> organizations)
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		if (permissionChecker.isCompanyAdmin()) {
 			return organizations;
@@ -249,7 +295,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			Organization organization = itr.next();
 
 			if (!OrganizationPermissionUtil.contains(
-					permissionChecker, organization.getOrganizationId(),
+					permissionChecker, organization,
 					ActionKeys.ASSIGN_MEMBERS)) {
 
 				itr.remove();
@@ -259,6 +305,7 @@ public class UsersAdminImpl implements UsersAdmin {
 		return filteredOrganizations;
 	}
 
+	@Override
 	public List<Role> filterRoles(
 		PermissionChecker permissionChecker, List<Role> roles) {
 
@@ -269,13 +316,13 @@ public class UsersAdminImpl implements UsersAdmin {
 		while (itr.hasNext()) {
 			Role role = itr.next();
 
-			String name = role.getName();
+			String roleName = role.getName();
 
-			if (name.equals(RoleConstants.GUEST) ||
-				name.equals(RoleConstants.ORGANIZATION_USER) ||
-				name.equals(RoleConstants.OWNER) ||
-				name.equals(RoleConstants.SITE_MEMBER) ||
-				name.equals(RoleConstants.USER)) {
+			if (roleName.equals(RoleConstants.GUEST) ||
+				roleName.equals(RoleConstants.ORGANIZATION_USER) ||
+				roleName.equals(RoleConstants.OWNER) ||
+				roleName.equals(RoleConstants.SITE_MEMBER) ||
+				roleName.equals(RoleConstants.USER)) {
 
 				itr.remove();
 			}
@@ -301,10 +348,48 @@ public class UsersAdminImpl implements UsersAdmin {
 		return filteredRoles;
 	}
 
+	@Override
+	public long[] filterUnsetGroupUserIds(
+			PermissionChecker permissionChecker, long groupId, long[] userIds)
+		throws PortalException {
+
+		long[] filteredUserIds = userIds;
+
+		for (long userId : userIds) {
+			if (SiteMembershipPolicyUtil.isMembershipProtected(
+					permissionChecker, userId, groupId)) {
+
+				filteredUserIds = ArrayUtil.remove(filteredUserIds, userId);
+			}
+		}
+
+		return filteredUserIds;
+	}
+
+	@Override
+	public long[] filterUnsetOrganizationUserIds(
+			PermissionChecker permissionChecker, long organizationId,
+			long[] userIds)
+		throws PortalException {
+
+		long[] filteredUserIds = userIds;
+
+		for (long userId : userIds) {
+			if (OrganizationMembershipPolicyUtil.isMembershipProtected(
+					permissionChecker, userId, organizationId)) {
+
+				filteredUserIds = ArrayUtil.remove(filteredUserIds, userId);
+			}
+		}
+
+		return filteredUserIds;
+	}
+
+	@Override
 	public List<UserGroupRole> filterUserGroupRoles(
 			PermissionChecker permissionChecker,
 			List<UserGroupRole> userGroupRoles)
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		List<UserGroupRole> filteredUserGroupRoles = ListUtil.copy(
 			userGroupRoles);
@@ -316,10 +401,10 @@ public class UsersAdminImpl implements UsersAdmin {
 
 			Role role = userGroupRole.getRole();
 
-			String name = role.getName();
+			String roleName = role.getName();
 
-			if (name.equals(RoleConstants.ORGANIZATION_USER) ||
-				name.equals(RoleConstants.SITE_MEMBER)) {
+			if (roleName.equals(RoleConstants.ORGANIZATION_USER) ||
+				roleName.equals(RoleConstants.SITE_MEMBER)) {
 
 				itr.remove();
 			}
@@ -345,6 +430,7 @@ public class UsersAdminImpl implements UsersAdmin {
 		return filteredUserGroupRoles;
 	}
 
+	@Override
 	public List<UserGroup> filterUserGroups(
 		PermissionChecker permissionChecker, List<UserGroup> userGroups) {
 
@@ -370,10 +456,12 @@ public class UsersAdminImpl implements UsersAdmin {
 		return filteredUserGroups;
 	}
 
+	@Override
 	public List<Address> getAddresses(ActionRequest actionRequest) {
 		return getAddresses(actionRequest, Collections.<Address>emptyList());
 	}
 
+	@Override
 	public List<Address> getAddresses(
 		ActionRequest actionRequest, List<Address> defaultAddresses) {
 
@@ -384,7 +472,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			return defaultAddresses;
 		}
 
-		List<Address> addresses = new ArrayList<Address>();
+		List<Address> addresses = new ArrayList<>();
 
 		int[] addressesIndexes = StringUtil.split(addressesIndexesString, 0);
 
@@ -405,19 +493,19 @@ public class UsersAdminImpl implements UsersAdmin {
 				actionRequest, "addressCity" + addressesIndex);
 			String zip = ParamUtil.getString(
 				actionRequest, "addressZip" + addressesIndex);
+			long countryId = ParamUtil.getLong(
+				actionRequest, "addressCountryId" + addressesIndex);
 
 			if (Validator.isNull(street1) && Validator.isNull(street2) &&
 				Validator.isNull(street3) && Validator.isNull(city) &&
-				Validator.isNull(zip)) {
+				Validator.isNull(zip) && (countryId == 0)) {
 
 				continue;
 			}
 
 			long regionId = ParamUtil.getLong(
 				actionRequest, "addressRegionId" + addressesIndex);
-			long countryId = ParamUtil.getLong(
-				actionRequest, "addressCountryId" + addressesIndex);
-			int typeId = ParamUtil.getInteger(
+			long typeId = ParamUtil.getLong(
 				actionRequest, "addressTypeId" + addressesIndex);
 			boolean mailing = ParamUtil.getBoolean(
 				actionRequest, "addressMailing" + addressesIndex);
@@ -447,11 +535,13 @@ public class UsersAdminImpl implements UsersAdmin {
 		return addresses;
 	}
 
+	@Override
 	public List<EmailAddress> getEmailAddresses(ActionRequest actionRequest) {
 		return getEmailAddresses(
 			actionRequest, Collections.<EmailAddress>emptyList());
 	}
 
+	@Override
 	public List<EmailAddress> getEmailAddresses(
 		ActionRequest actionRequest, List<EmailAddress> defaultEmailAddresses) {
 
@@ -462,7 +552,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			return defaultEmailAddresses;
 		}
 
-		List<EmailAddress> emailAddresses = new ArrayList<EmailAddress>();
+		List<EmailAddress> emailAddresses = new ArrayList<>();
 
 		int[] emailAddressesIndexes = StringUtil.split(
 			emailAddressesIndexesString, 0);
@@ -481,7 +571,7 @@ public class UsersAdminImpl implements UsersAdmin {
 				continue;
 			}
 
-			int typeId = ParamUtil.getInteger(
+			long typeId = ParamUtil.getLong(
 				actionRequest, "emailAddressTypeId" + emailAddressesIndex);
 
 			boolean primary = false;
@@ -503,7 +593,24 @@ public class UsersAdminImpl implements UsersAdmin {
 		return emailAddresses;
 	}
 
-	public OrderByComparator getGroupOrderByComparator(
+	@Override
+	public long[] getGroupIds(PortletRequest portletRequest)
+		throws PortalException {
+
+		long[] groupIds = new long[0];
+
+		User user = PortalUtil.getSelectedUser(portletRequest);
+
+		if (user != null) {
+			groupIds = user.getGroupIds();
+		}
+
+		return getRequestPrimaryKeys(
+			portletRequest, groupIds, "addGroupIds", "deleteGroupIds");
+	}
+
+	@Override
+	public OrderByComparator<Group> getGroupOrderByComparator(
 		String orderByCol, String orderByType) {
 
 		boolean orderByAsc = false;
@@ -512,7 +619,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			orderByAsc = true;
 		}
 
-		OrderByComparator orderByComparator = null;
+		OrderByComparator<Group> orderByComparator = null;
 
 		if (orderByCol.equals("name")) {
 			orderByComparator = new GroupNameComparator(orderByAsc);
@@ -527,6 +634,7 @@ public class UsersAdminImpl implements UsersAdmin {
 		return orderByComparator;
 	}
 
+	@Override
 	public Long[] getOrganizationIds(List<Organization> organizations) {
 		if ((organizations == null) || organizations.isEmpty()) {
 			return new Long[0];
@@ -537,13 +645,31 @@ public class UsersAdminImpl implements UsersAdmin {
 		for (int i = 0; i < organizations.size(); i++) {
 			Organization organization = organizations.get(i);
 
-			organizationIds[i] = new Long(organization.getOrganizationId());
+			organizationIds[i] = Long.valueOf(organization.getOrganizationId());
 		}
 
 		return organizationIds;
 	}
 
-	public OrderByComparator getOrganizationOrderByComparator(
+	@Override
+	public long[] getOrganizationIds(PortletRequest portletRequest)
+		throws PortalException {
+
+		long[] organizationIds = new long[0];
+
+		User user = PortalUtil.getSelectedUser(portletRequest);
+
+		if (user != null) {
+			organizationIds = user.getOrganizationIds();
+		}
+
+		return getRequestPrimaryKeys(
+			portletRequest, organizationIds, "addOrganizationIds",
+			"deleteOrganizationIds");
+	}
+
+	@Override
+	public OrderByComparator<Organization> getOrganizationOrderByComparator(
 		String orderByCol, String orderByType) {
 
 		boolean orderByAsc = false;
@@ -552,7 +678,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			orderByAsc = true;
 		}
 
-		OrderByComparator orderByComparator = null;
+		OrderByComparator<Organization> orderByComparator = null;
 
 		if (orderByCol.equals("name")) {
 			orderByComparator = new OrganizationNameComparator(orderByAsc);
@@ -567,29 +693,25 @@ public class UsersAdminImpl implements UsersAdmin {
 		return orderByComparator;
 	}
 
-	public Tuple getOrganizations(Hits hits)
-		throws PortalException, SystemException {
-
-		List<Organization> organizations = new ArrayList<Organization>();
-		boolean corruptIndex = false;
+	@Override
+	public List<Organization> getOrganizations(Hits hits)
+		throws PortalException {
 
 		List<Document> documents = hits.toList();
+
+		List<Organization> organizations = new ArrayList<>(documents.size());
 
 		for (Document document : documents) {
 			long organizationId = GetterUtil.getLong(
 				document.get(Field.ORGANIZATION_ID));
 
-			try {
-				Organization organization =
-					OrganizationLocalServiceUtil.getOrganization(
-						organizationId);
+			Organization organization =
+				OrganizationLocalServiceUtil.fetchOrganization(organizationId);
 
-				organizations.add(organization);
-			}
-			catch (NoSuchOrganizationException nsoe) {
-				corruptIndex = true;
+			if (organization == null) {
+				organizations = null;
 
-				Indexer indexer = IndexerRegistryUtil.getIndexer(
+				Indexer<Organization> indexer = IndexerRegistryUtil.getIndexer(
 					Organization.class);
 
 				long companyId = GetterUtil.getLong(
@@ -597,13 +719,17 @@ public class UsersAdminImpl implements UsersAdmin {
 
 				indexer.delete(companyId, document.getUID());
 			}
+			else if (organizations != null) {
+				organizations.add(organization);
+			}
 		}
 
-		return new Tuple(organizations, corruptIndex);
+		return organizations;
 	}
 
+	@Override
 	public List<OrgLabor> getOrgLabors(ActionRequest actionRequest) {
-		List<OrgLabor> orgLabors = new ArrayList<OrgLabor>();
+		List<OrgLabor> orgLabors = new ArrayList<>();
 
 		int[] orgLaborsIndexes = StringUtil.split(
 			ParamUtil.getString(actionRequest, "orgLaborsIndexes"), 0);
@@ -612,7 +738,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			long orgLaborId = ParamUtil.getLong(
 				actionRequest, "orgLaborId" + orgLaborsIndex);
 
-			int typeId = ParamUtil.getInteger(
+			long typeId = ParamUtil.getLong(
 				actionRequest, "orgLaborTypeId" + orgLaborsIndex, -1);
 
 			if (typeId == -1) {
@@ -673,10 +799,12 @@ public class UsersAdminImpl implements UsersAdmin {
 		return orgLabors;
 	}
 
+	@Override
 	public List<Phone> getPhones(ActionRequest actionRequest) {
 		return getPhones(actionRequest, Collections.<Phone>emptyList());
 	}
 
+	@Override
 	public List<Phone> getPhones(
 		ActionRequest actionRequest, List<Phone> defaultPhones) {
 
@@ -687,7 +815,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			return defaultPhones;
 		}
 
-		List<Phone> phones = new ArrayList<Phone>();
+		List<Phone> phones = new ArrayList<>();
 
 		int[] phonesIndexes = StringUtil.split(phonesIndexesString, 0);
 
@@ -706,7 +834,7 @@ public class UsersAdminImpl implements UsersAdmin {
 				continue;
 			}
 
-			int typeId = ParamUtil.getInteger(
+			long typeId = ParamUtil.getLong(
 				actionRequest, "phoneTypeId" + phonesIndex);
 
 			boolean primary = false;
@@ -728,7 +856,24 @@ public class UsersAdminImpl implements UsersAdmin {
 		return phones;
 	}
 
-	public OrderByComparator getRoleOrderByComparator(
+	@Override
+	public long[] getRoleIds(PortletRequest portletRequest)
+		throws PortalException {
+
+		long[] roleIds = new long[0];
+
+		User user = PortalUtil.getSelectedUser(portletRequest);
+
+		if (user != null) {
+			roleIds = user.getRoleIds();
+		}
+
+		return getRequestPrimaryKeys(
+			portletRequest, roleIds, "addRoleIds", "deleteRoleIds");
+	}
+
+	@Override
+	public OrderByComparator<Role> getRoleOrderByComparator(
 		String orderByCol, String orderByType) {
 
 		boolean orderByAsc = false;
@@ -737,7 +882,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			orderByAsc = true;
 		}
 
-		OrderByComparator orderByComparator = null;
+		OrderByComparator<Role> orderByComparator = null;
 
 		if (orderByCol.equals("name")) {
 			orderByComparator = new RoleNameComparator(orderByAsc);
@@ -755,7 +900,42 @@ public class UsersAdminImpl implements UsersAdmin {
 		return orderByComparator;
 	}
 
-	public OrderByComparator getUserGroupOrderByComparator(
+	@Override
+	public <T> String getUserColumnText(
+		Locale locale, List<? extends T> list, Accessor<T, String> accessor,
+		int count) {
+
+		String result = ListUtil.toString(
+			list, accessor, StringPool.COMMA_AND_SPACE);
+
+		if (list.size() < count) {
+			result += StringPool.SPACE + LanguageUtil.format(
+				locale, "and-x-more", String.valueOf(count - list.size()),
+				false);
+		}
+
+		return result;
+	}
+
+	@Override
+	public long[] getUserGroupIds(PortletRequest portletRequest)
+		throws PortalException {
+
+		long[] userGroupIds = new long[0];
+
+		User user = PortalUtil.getSelectedUser(portletRequest);
+
+		if (user != null) {
+			userGroupIds = user.getUserGroupIds();
+		}
+
+		return getRequestPrimaryKeys(
+			portletRequest, userGroupIds, "addUserGroupIds",
+			"deleteUserGroupIds");
+	}
+
+	@Override
+	public OrderByComparator<UserGroup> getUserGroupOrderByComparator(
 		String orderByCol, String orderByType) {
 
 		boolean orderByAsc = false;
@@ -764,7 +944,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			orderByAsc = true;
 		}
 
-		OrderByComparator orderByComparator = null;
+		OrderByComparator<UserGroup> orderByComparator = null;
 
 		if (orderByCol.equals("name")) {
 			orderByComparator = new UserGroupNameComparator(orderByAsc);
@@ -779,47 +959,65 @@ public class UsersAdminImpl implements UsersAdmin {
 		return orderByComparator;
 	}
 
+	@Override
 	public List<UserGroupRole> getUserGroupRoles(PortletRequest portletRequest)
-		throws PortalException, SystemException {
-
-		List<UserGroupRole> userGroupRoles = new UniqueList<UserGroupRole>();
-
-		long[] groupRolesRoleIds= StringUtil.split(ParamUtil.getString(
-			portletRequest, "groupRolesRoleIds"), 0L);
-		long[] groupRolesGroupIds= StringUtil.split(ParamUtil.getString(
-			portletRequest, "groupRolesGroupIds"), 0L);
-
-		if (groupRolesGroupIds.length != groupRolesRoleIds.length) {
-			return userGroupRoles;
-		}
+		throws PortalException {
 
 		User user = PortalUtil.getSelectedUser(portletRequest);
 
-		long userId = 0;
-
-		if (user != null) {
-			userId = user.getUserId();
+		if (user == null) {
+			return Collections.emptyList();
 		}
 
-		for (int i = 0; i < groupRolesGroupIds.length; i++) {
-			if ((groupRolesGroupIds[i] == 0) || (groupRolesRoleIds[i] == 0)) {
-				continue;
-			}
+		Set<UserGroupRole> userGroupRoles = new HashSet<>(
+			UserGroupRoleLocalServiceUtil.getUserGroupRoles(user.getUserId()));
 
-			UserGroupRolePK userGroupRolePK = new UserGroupRolePK(
-				userId, groupRolesGroupIds[i], groupRolesRoleIds[i]);
+		userGroupRoles.addAll(
+			getUserGroupRoles(
+				portletRequest, user, "addGroupRolesGroupIds",
+				"addGroupRolesRoleIds"));
+		userGroupRoles.removeAll(
+			getUserGroupRoles(
+				portletRequest, user, "deleteGroupRolesGroupIds",
+				"deleteGroupRolesRoleIds"));
 
-			UserGroupRole userGroupRole =
-				UserGroupRoleLocalServiceUtil.createUserGroupRole(
-					userGroupRolePK);
-
-			userGroupRoles.add(userGroupRole);
-		}
-
-		return userGroupRoles;
+		return new ArrayList<>(userGroupRoles);
 	}
 
-	public OrderByComparator getUserOrderByComparator(
+	@Override
+	public List<UserGroup> getUserGroups(Hits hits) throws PortalException {
+		List<Document> documents = hits.toList();
+
+		List<UserGroup> userGroups = new ArrayList<>(documents.size());
+
+		for (Document document : documents) {
+			long userGroupId = GetterUtil.getLong(
+				document.get(Field.USER_GROUP_ID));
+
+			UserGroup userGroup = UserGroupLocalServiceUtil.fetchUserGroup(
+				userGroupId);
+
+			if (userGroup == null) {
+				userGroups = null;
+
+				Indexer<UserGroup> indexer = IndexerRegistryUtil.getIndexer(
+					UserGroup.class);
+
+				long companyId = GetterUtil.getLong(
+					document.get(Field.COMPANY_ID));
+
+				indexer.delete(companyId, document.getUID());
+			}
+			else if (userGroups != null) {
+				userGroups.add(userGroup);
+			}
+		}
+
+		return userGroups;
+	}
+
+	@Override
+	public OrderByComparator<User> getUserOrderByComparator(
 		String orderByCol, String orderByType) {
 
 		boolean orderByAsc = false;
@@ -828,7 +1026,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			orderByAsc = true;
 		}
 
-		OrderByComparator orderByComparator = null;
+		OrderByComparator<User> orderByComparator = null;
 
 		if (orderByCol.equals("email-address")) {
 			orderByComparator = new UserEmailAddressComparator(orderByAsc);
@@ -852,39 +1050,42 @@ public class UsersAdminImpl implements UsersAdmin {
 		return orderByComparator;
 	}
 
-	public Tuple getUsers(Hits hits) throws PortalException, SystemException {
-		List<User> users = new ArrayList<User>();
-		boolean corruptIndex = false;
-
+	@Override
+	public List<User> getUsers(Hits hits) throws PortalException {
 		List<Document> documents = hits.toList();
 
+		List<User> users = new ArrayList<>(documents.size());
+
 		for (Document document : documents) {
-			long userId = GetterUtil.getLong(document.get(Field.USER_ID));
+			long userId = UserIndexer.getUserId(document);
 
-			try {
-				User user = UserLocalServiceUtil.getUser(userId);
+			User user = UserLocalServiceUtil.fetchUser(userId);
 
-				users.add(user);
-			}
-			catch (NoSuchUserException nsue) {
-				corruptIndex = true;
+			if (user == null) {
+				users = null;
 
-				Indexer indexer = IndexerRegistryUtil.getIndexer(User.class);
+				Indexer<User> indexer = IndexerRegistryUtil.getIndexer(
+					User.class);
 
 				long companyId = GetterUtil.getLong(
 					document.get(Field.COMPANY_ID));
 
 				indexer.delete(companyId, document.getUID());
 			}
+			else if (users != null) {
+				users.add(user);
+			}
 		}
 
-		return new Tuple(users, corruptIndex);
+		return users;
 	}
 
+	@Override
 	public List<Website> getWebsites(ActionRequest actionRequest) {
 		return getWebsites(actionRequest, Collections.<Website>emptyList());
 	}
 
+	@Override
 	public List<Website> getWebsites(
 		ActionRequest actionRequest, List<Website> defaultWebsites) {
 
@@ -895,7 +1096,7 @@ public class UsersAdminImpl implements UsersAdmin {
 			return defaultWebsites;
 		}
 
-		List<Website> websites = new ArrayList<Website>();
+		List<Website> websites = new ArrayList<>();
 
 		int[] websitesIndexes = StringUtil.split(websitesIndexesString, 0);
 
@@ -913,7 +1114,7 @@ public class UsersAdminImpl implements UsersAdmin {
 				continue;
 			}
 
-			int typeId = ParamUtil.getInteger(
+			long typeId = ParamUtil.getLong(
 				actionRequest, "websiteTypeId" + websitesIndex);
 
 			boolean primary = false;
@@ -934,80 +1135,137 @@ public class UsersAdminImpl implements UsersAdmin {
 		return websites;
 	}
 
+	/**
+	 * @deprecated As of 6.2.0, replaced by {@link
+	 *             #hasUpdateFieldPermission(PermissionChecker, User, User,
+	 *             String)}
+	 */
+	@Deprecated
+	@Override
 	public boolean hasUpdateEmailAddress(
 			PermissionChecker permissionChecker, User user)
-		throws PortalException, SystemException {
+		throws PortalException {
 
-		String[] fieldEditiableUserEmailAddress =
-			PropsValues.
-				FIELD_EDITABLE_COM_LIFERAY_PORTAL_MODEL_USER_EMAILADDRESS;
+		return hasUpdateFieldPermission(
+			permissionChecker, null, user, "emailAddress");
+	}
 
-		if (ArrayUtil.contains(
-				fieldEditiableUserEmailAddress, "administrator") &&
-			permissionChecker.isCompanyAdmin()) {
+	@Override
+	public boolean hasUpdateFieldPermission(
+			PermissionChecker permissionChecker, User updatingUser,
+			User updatedUser, String field)
+		throws PortalException {
+
+		if (updatedUser == null) {
+			return true;
+		}
+
+		if (updatingUser == null) {
+			long updatingUserId = PrincipalThreadLocal.getUserId();
+
+			if (updatingUserId > 0) {
+				updatingUser = UserLocalServiceUtil.fetchUserById(
+					updatingUserId);
+			}
+		}
+
+		if ((updatingUser != null) && !updatingUser.equals(updatedUser) &&
+			UserPermissionUtil.contains(
+				permissionChecker, updatingUser.getUserId(),
+				ActionKeys.UPDATE_USER)) {
 
 			return true;
 		}
 
-		if (ArrayUtil.contains(
-				fieldEditiableUserEmailAddress, "user-with-mx") &&
-			user.hasCompanyMx()) {
+		for (String userType : PropsValues.FIELD_EDITABLE_USER_TYPES) {
+			if (userType.equals("user-with-mx") && updatedUser.hasCompanyMx()) {
+				return true;
+			}
 
-			return true;
+			if (userType.equals("user-without-mx") &&
+				!updatedUser.hasCompanyMx()) {
+
+				return true;
+			}
 		}
 
-		if (ArrayUtil.contains(
-				fieldEditiableUserEmailAddress, "user-without-mx") &&
-			!user.hasCompanyMx()) {
+		for (String roleName : PropsValues.FIELD_EDITABLE_ROLES) {
+			Role role = RoleLocalServiceUtil.fetchRole(
+				updatedUser.getCompanyId(), roleName);
 
-			return true;
+			if ((role != null) &&
+				RoleLocalServiceUtil.hasUserRole(
+					updatedUser.getUserId(), role.getRoleId())) {
+
+				return true;
+			}
+		}
+
+		String emailAddress = updatedUser.getEmailAddress();
+
+		for (String domainName : PropsValues.FIELD_EDITABLE_DOMAINS) {
+			if (emailAddress.endsWith(domainName)) {
+				return true;
+			}
+		}
+
+		String[] fieldEditableDomainNames = PropsUtil.getArray(
+			PropsKeys.FIELD_EDITABLE_DOMAINS, new Filter(field));
+
+		for (String domainName : fieldEditableDomainNames) {
+			if (domainName.equals(StringPool.STAR) ||
+				emailAddress.endsWith(domainName)) {
+
+				return true;
+			}
 		}
 
 		return false;
 	}
 
+	/**
+	 * @deprecated As of 6.2.0, replaced by {@link
+	 *             #hasUpdateFieldPermission(PermissionChecker, User, User,
+	 *             String)}
+	 */
+	@Deprecated
+	@Override
+	public boolean hasUpdateFieldPermission(User user, String field)
+		throws PortalException {
+
+		PermissionChecker permissionChecker =
+			PermissionThreadLocal.getPermissionChecker();
+
+		return hasUpdateFieldPermission(permissionChecker, null, user, field);
+	}
+
+	/**
+	 * @deprecated As of 6.2.0, replaced by {@link
+	 *             #hasUpdateFieldPermission(PermissionChecker, User, User,
+	 *             String)}
+	 */
+	@Deprecated
+	@Override
 	public boolean hasUpdateScreenName(
 			PermissionChecker permissionChecker, User user)
-		throws PortalException, SystemException {
+		throws PortalException {
 
-		String[] fieldEditiableUserScreenName =
-			PropsValues.
-				FIELD_EDITABLE_COM_LIFERAY_PORTAL_MODEL_USER_SCREENNAME;
-
-		if (ArrayUtil.contains(
-				fieldEditiableUserScreenName, "administrator") &&
-			permissionChecker.isCompanyAdmin()) {
-
-			return true;
-		}
-
-		if (ArrayUtil.contains(
-				fieldEditiableUserScreenName, "user-with-mx") &&
-			user.hasCompanyMx()) {
-
-			return true;
-		}
-
-		if (ArrayUtil.contains(
-				fieldEditiableUserScreenName, "user-without-mx") &&
-			!user.hasCompanyMx()) {
-
-			return true;
-		}
-
-		return false;
+		return hasUpdateFieldPermission(
+			permissionChecker, null, user, "screenName");
 	}
 
+	@Override
 	public long[] removeRequiredRoles(long userId, long[] roleIds)
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		User user = UserLocalServiceUtil.getUser(userId);
 
 		return removeRequiredRoles(user, roleIds);
 	}
 
+	@Override
 	public long[] removeRequiredRoles(User user, long[] roleIds)
-		throws PortalException, SystemException {
+		throws PortalException {
 
 		Role role = RoleLocalServiceUtil.getRole(
 			user.getCompanyId(), RoleConstants.USER);
@@ -1017,11 +1275,12 @@ public class UsersAdminImpl implements UsersAdmin {
 		return roleIds;
 	}
 
+	@Override
 	public void updateAddresses(
 			String className, long classPK, List<Address> addresses)
-		throws PortalException, SystemException {
+		throws PortalException {
 
-		Set<Long> addressIds = new HashSet<Long>();
+		Set<Long> addressIds = new HashSet<>();
 
 		for (Address address : addresses) {
 			long addressId = address.getAddressId();
@@ -1033,14 +1292,15 @@ public class UsersAdminImpl implements UsersAdmin {
 			String zip = address.getZip();
 			long regionId = address.getRegionId();
 			long countryId = address.getCountryId();
-			int typeId = address.getTypeId();
+			long typeId = address.getTypeId();
 			boolean mailing = address.isMailing();
 			boolean primary = address.isPrimary();
 
 			if (addressId <= 0) {
 				address = AddressServiceUtil.addAddress(
 					className, classPK, street1, street2, street3, city, zip,
-					regionId, countryId, typeId, mailing, primary);
+					regionId, countryId, typeId, mailing, primary,
+					new ServiceContext());
 
 				addressId = address.getAddressId();
 			}
@@ -1062,22 +1322,24 @@ public class UsersAdminImpl implements UsersAdmin {
 		}
 	}
 
+	@Override
 	public void updateEmailAddresses(
 			String className, long classPK, List<EmailAddress> emailAddresses)
-		throws PortalException, SystemException {
+		throws PortalException {
 
-		Set<Long> emailAddressIds = new HashSet<Long>();
+		Set<Long> emailAddressIds = new HashSet<>();
 
 		for (EmailAddress emailAddress : emailAddresses) {
 			long emailAddressId = emailAddress.getEmailAddressId();
 
 			String address = emailAddress.getAddress();
-			int typeId = emailAddress.getTypeId();
+			long typeId = emailAddress.getTypeId();
 			boolean primary = emailAddress.isPrimary();
 
 			if (emailAddressId <= 0) {
 				emailAddress = EmailAddressServiceUtil.addEmailAddress(
-					className, classPK, address, typeId, primary);
+					className, classPK, address, typeId, primary,
+					new ServiceContext());
 
 				emailAddressId = emailAddress.getEmailAddressId();
 			}
@@ -1100,15 +1362,16 @@ public class UsersAdminImpl implements UsersAdmin {
 		}
 	}
 
+	@Override
 	public void updateOrgLabors(long classPK, List<OrgLabor> orgLabors)
-		throws PortalException, SystemException {
+		throws PortalException {
 
-		Set<Long> orgLaborsIds = new HashSet<Long>();
+		Set<Long> orgLaborsIds = new HashSet<>();
 
 		for (OrgLabor orgLabor : orgLabors) {
 			long orgLaborId = orgLabor.getOrgLaborId();
 
-			int typeId = orgLabor.getTypeId();
+			long typeId = orgLabor.getTypeId();
 			int sunOpen = orgLabor.getSunOpen();
 			int sunClose = orgLabor.getSunClose();
 			int monOpen = orgLabor.getMonOpen();
@@ -1151,22 +1414,24 @@ public class UsersAdminImpl implements UsersAdmin {
 		}
 	}
 
+	@Override
 	public void updatePhones(String className, long classPK, List<Phone> phones)
-		throws PortalException, SystemException {
+		throws PortalException {
 
-		Set<Long> phoneIds = new HashSet<Long>();
+		Set<Long> phoneIds = new HashSet<>();
 
 		for (Phone phone : phones) {
 			long phoneId = phone.getPhoneId();
 
 			String number = phone.getNumber();
 			String extension = phone.getExtension();
-			int typeId = phone.getTypeId();
+			long typeId = phone.getTypeId();
 			boolean primary = phone.isPrimary();
 
 			if (phoneId <= 0) {
 				phone = PhoneServiceUtil.addPhone(
-					className, classPK, number, extension, typeId, primary);
+					className, classPK, number, extension, typeId, primary,
+					new ServiceContext());
 
 				phoneId = phone.getPhoneId();
 			}
@@ -1187,22 +1452,24 @@ public class UsersAdminImpl implements UsersAdmin {
 		}
 	}
 
+	@Override
 	public void updateWebsites(
 			String className, long classPK, List<Website> websites)
-		throws PortalException, SystemException {
+		throws PortalException {
 
-		Set<Long> websiteIds = new HashSet<Long>();
+		Set<Long> websiteIds = new HashSet<>();
 
 		for (Website website : websites) {
 			long websiteId = website.getWebsiteId();
 
 			String url = website.getUrl();
-			int typeId = website.getTypeId();
+			long typeId = website.getTypeId();
 			boolean primary = website.isPrimary();
 
 			if (websiteId <= 0) {
 				website = WebsiteServiceUtil.addWebsite(
-					className, classPK, url, typeId, primary);
+					className, classPK, url, typeId, primary,
+					new ServiceContext());
 
 				websiteId = website.getWebsiteId();
 			}
@@ -1221,6 +1488,67 @@ public class UsersAdminImpl implements UsersAdmin {
 				WebsiteServiceUtil.deleteWebsite(website.getWebsiteId());
 			}
 		}
+	}
+
+	protected long[] getRequestPrimaryKeys(
+		PortletRequest portletRequest, long[] currentPKs, String addParam,
+		String deleteParam) {
+
+		Set<Long> primaryKeys = SetUtil.fromArray(currentPKs);
+
+		long[] addPrimaryKeys = StringUtil.split(
+			ParamUtil.getString(portletRequest, addParam), 0L);
+		long[] deletePrimaryKeys = StringUtil.split(
+			ParamUtil.getString(portletRequest, deleteParam), 0L);
+
+		for (long addPrimaryKey : addPrimaryKeys) {
+			primaryKeys.add(addPrimaryKey);
+		}
+
+		for (long deletePrimaryKey : deletePrimaryKeys) {
+			primaryKeys.remove(deletePrimaryKey);
+		}
+
+		return ArrayUtil.toLongArray(primaryKeys);
+	}
+
+	protected Set<UserGroupRole> getUserGroupRoles(
+		PortletRequest portletRequest, User user, String groupIdsParam,
+		String roleIdsParam) {
+
+		Set<UserGroupRole> userGroupRoles = new HashSet<>();
+
+		long[] groupRolesGroupIds = StringUtil.split(
+			ParamUtil.getString(portletRequest, groupIdsParam), 0L);
+		long[] groupRolesRoleIds = StringUtil.split(
+			ParamUtil.getString(portletRequest, roleIdsParam), 0L);
+
+		if (groupRolesGroupIds.length != groupRolesRoleIds.length) {
+			return userGroupRoles;
+		}
+
+		long userId = 0;
+
+		if (user != null) {
+			userId = user.getUserId();
+		}
+
+		for (int i = 0; i < groupRolesGroupIds.length; i++) {
+			if ((groupRolesGroupIds[i] == 0) || (groupRolesRoleIds[i] == 0)) {
+				continue;
+			}
+
+			UserGroupRolePK userGroupRolePK = new UserGroupRolePK(
+				userId, groupRolesGroupIds[i], groupRolesRoleIds[i]);
+
+			UserGroupRole userGroupRole =
+				UserGroupRoleLocalServiceUtil.createUserGroupRole(
+					userGroupRolePK);
+
+			userGroupRoles.add(userGroupRole);
+		}
+
+		return userGroupRoles;
 	}
 
 }
